Remove refresh
